--- a/client/src/styles/Payouts.module.css
+++ b/client/src/styles/Payouts.module.css
@@ -1,15 +1,16 @@
 .cont {
-  width: 1440px;
+  width: 100%;
   height: 922px;
+  background-color: #fafafa;
 }
 .right {
-  width: 1216px;
+  width: 100%;
 }
 .topRightCont {
   border-bottom: 1px solid #d9d9d9;
   background: white;
   display: flex;
-  width: 1216px;
+  width: 100%;
   height: 64px;
   padding: 12px 32px;
   align-items: center;
@@ -107,7 +108,7 @@
 
 .bottomRightCont {
   display: flex;
-  width: 1152px;
+  width: 95%;
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
@@ -369,7 +370,7 @@
 }
 
 .transactionMain {
-  width: 1152px;
+  width: 100%;
   height: 548px;
   display: flex;
   flex-direction: column;
@@ -430,7 +431,7 @@
 
 .allTransactionCont {
   display: flex;
-  width: 1152px;
+  width: 100%;
   height: 482px;
   padding: 12px 12px 8px 12px;
   flex-direction: column;
@@ -449,7 +450,7 @@
   gap: 20px;
 }
 .bottomBar {
-  width: 1128px;
+  width: 100%;
   height: 40px;
   display: flex;
   justify-content: space-between;
