--- a/client/src/styles/sidebar/Sidebar.module.css
+++ b/client/src/styles/sidebar/Sidebar.module.css
@@ -1,13 +1,15 @@
 .cont {
   display: flex;
   width: 224px;
-  height: 922px;
+  height: 100vh;
   padding: 16px 10px;
   flex-direction: column;
   align-items: center;
   gap: 16px;
   flex-shrink: 0;
-
+  position: sticky;
+  z-index: 3;
+  top: 0;
   background: #1e2640;
 }
 
