--- a/client/src/styles/table/Table.module.css
+++ b/client/src/styles/table/Table.module.css
@@ -54,11 +54,18 @@
 
 .iconBoxpp {
   display: flex;
+  width: 89px;
+  height: 20px;
   align-items: center;
+
   gap: 6px;
 }
 
 .iconp {
   height: 10px;
   width: 10px;
+}
+.iconpp {
+  height: 11px;
+  width: 11px;
 }
