--- a/client/src/styles/Payouts.module.css
+++ b/client/src/styles/Payouts.module.css
@@ -25,7 +25,7 @@
   align-items: center;
   justify-content: center;
   gap: 16px;
-  flex: 1 0 0;
+  width: 32.5%;
 }
 
 .qCont {
@@ -57,8 +57,8 @@
 .topSearchCont {
   background: #f2f2f2;
   display: flex;
-  width: 400px;
-  padding: 9px 16px;
+  width: 360px;
+  padding: 9px 0px;
   align-items: center;
   gap: 0px;
   align-self: stretch;
